# vboxgpu

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN-M1.1.md  README.md  host_err_final.txt  host_err_sc16.txt  kill_host.bat  man_build.bat  man_run.bat  man_run_only.bat  vbox-gpu-bridge-full-plan-v1.0.md
codegen/: README.md  bridge_api_list.py  bridge_codegen.py
common/: timing.h  vboxgpu_config.h
common/transport/: tcp_transport.h  transport.h
common/venus/: vn_command.h  vn_encoder.h  vn_gen_command.h  vn_gen_decode.h  vn_gen_encode.h  vn_gen_types.h  vn_stream.h
docs/: ghostframe_fix_postmortem.md  plan-gpu-resource-serialization.md  road_to_anim_triangle.md  road_to_tex_triangle.md
guest_sim/: CMakeLists.txt
guest_sim/src/: main.cpp
guest_vk_icd/: CMakeLists.txt  vbox_icd.json  vbox_vulkan.def
guest_vk_icd/src/: icd_dispatch.cpp  icd_dispatch.h  icd_physical_device.cpp
host/: CMakeLists.txt
host/src/: client_session.cpp  client_session.h  main.cpp  main_cmdstream.cpp  main_server.cpp  vk_bootstrap.cpp  vk_bootstrap.h  vk_pipeline.cpp  vk_pipeline.h  vk_renderer.cpp  vk_renderer.h  vn_decoder.cpp  vn_decoder.h  win_capture.cpp  win_capture.h
scripts/: capture_window.py  check_screenshot.py  compare_capture.py  detect_ghostframe.py  disasm_cmdstream.py  extract_shader.py  find_mismatch.py  parse_pipeline.py  trace_scene.py
tests/dx11_depth_test/: CMakeLists.txt
tests/dx11_depth_test/src/: main.cpp
tests/dx11_multi_blend/: CMakeLists.txt
tests/dx11_multi_blend/src/: main.cpp
tests/dx11_rtt/: CMakeLists.txt
tests/dx11_rtt/src/: main.cpp
tests/dx11_triangle/: CMakeLists.txt  setup_test.bat
tests/dx11_triangle/src/: main.cpp
